# ollama-workflows

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: readme.md  workflow.md
examples/: execute_workflow.rs  import_test.rs
examples/workflows/: research.json  search.json
my_workflows/: research.json  search.json  xx.json
src/: lib.rs  main.rs
src/api_interface/: gem_api.rs  mod.rs  open_router.rs  openai_api.rs  vllm.rs
src/core/: atomics.rs  errors.rs  executor.rs  workflow.rs
src/memory/: cache.rs  files.rs  mod.rs  semantic.rs  stack.rs  types.rs
src/program/: atomics.rs  errors.rs  executor.rs  io.rs  mod.rs  models.rs  parser.rs  workflow.rs
src/tools/: browserless.rs  ddg.rs  external.rs  jina.rs  langchain_compat.rs  mod.rs  serper.rs
src/workflows/: forms.json  primitives.json  search.json
tests/: run.rs  search_workflow.rs  task_test.rs
tests/test_workflows/: all.json  base.json  coding.json  context_size.json  custom_tool.json  custom_tools.json  custom_tools_http.json  insert.json  long_context.json  multiple_steps.json  post_process.json  questions.json  raw_tools.json  search.json  simple.json  structured_output.json  ticker.json  users.json
tests/test_workflows/structured_output/: gemini.json  llama.json  openai.json
tests/test_workflows_json5/: all.json5  insert.json5  post_process.json5  questions.json5  search.json5  simple.json5  ticker.json5  users.json5
