[package]
name = "ollama-workflows"
version = "0.1.0"
edition = "2021"
authors = ["andthattoo"]

[dependencies]
tokio-util = { version = "0.7.10", features = ["rt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
rand = "0.8.5"
ollama-rs = { git = "https://github.com/andthattoo/ollama-rs.git", branch = "master", features = ["function-calling"]}
parking_lot = "0.12.2"
langchain-rust = "4.1.1"
scraper = "0.19.0"
text-splitter = "0.13.1"
search_with_google = "0.5.0"
html2text = "0.12.5"
async-trait = "0.1.80"
regex = { version = "1.9.3" }
log = "0.4"
env_logger = "0.9"
colored = "2.0"
dotenv = "0.15"
simsimd = "4.3.1"
